Fix overlap in official comments
The actions button overlaps with the "Official comment" label, so this
re-adds the margin from v1.

--- a/style.css
+++ b/style.css
@@ -2154,6 +2154,7 @@ ul {
   text-align: center;
   flex-shrink: 0;
   /*Avoid collapsing elements in Safari*/
+  margin: 15px 0;
 }
 
 /***** Community *****/
